--- a/Mixxx/mixxx.cfg
+++ b/Mixxx/mixxx.cfg
@@ -96,6 +96,7 @@ keylockMode 0
 keyunlockMode 0
 
 [Deere]
+LibrarySidebarSplitSize 199,1715
 sampler_row_current 0
 show_bpm_info 1
 show_crossfader 1
